--- a/src/styles/components/icons.scss
+++ b/src/styles/components/icons.scss
@@ -30,7 +30,7 @@ $bg-color-light: #ECF5FD;
   -moz-osx-font-smoothing: grayscale;
 }
 
-.iconimage2vector:before {
+.shipfont-iconimage2vector:before {
   content: "\e602";
 }
 
