--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -26,7 +26,8 @@
   @include line();
 
   &:active {
-    opacity: $opacity-active;
+    // opacity: $opacity-active;
+    filter: brightness(85%);
   }
 
   /* elements */
