--- a/src/styles/components/tabs.scss
+++ b/src/styles/components/tabs.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 @import '../variables/default.scss';
 @import '../mixins/index.scss';
 $component:'.at-tabs';
@@ -24,7 +25,7 @@ $at-tabs-pane-min-height: 100px;
 
     &-tip {
       position: absolute;
-      padding: $spacing-h-sm / 2 $spacing-h-sm;
+      padding: math.div($spacing-h-sm, 2) $spacing-h-sm;
       top: -26px;
       right: -24PX;
       color: $at-badge-color;
